--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-02-18 12:14+0100\n"
-"PO-Revision-Date: 2016-03-03 03:13+0100\n"
+"PO-Revision-Date: 2016-05-19 03:17+0200\n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,6 +20,10 @@ msgstr ""
 #: templates/base.html:4 templates/shared/social_sharing.html:5
 msgid "Presupuestos del Gobierno de Aragón"
 msgstr "Presupuestos del Ayuntamiento de Polinyà"
+
+#
+msgid "Información presupuestaria del Gobierno de Aragón"
+msgstr "Información presupuestaria del Ayuntamiento de Polinyà"
 
 #: templates/budgets/budgets_intro.html:16
 msgid ""
