--- a/locale/ca/LC_MESSAGES/django.po
+++ b/locale/ca/LC_MESSAGES/django.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-13 16:37+0200\n"
-"PO-Revision-Date: 2016-05-19 03:17+0200\n"
+"PO-Revision-Date: 2017-01-05 12:47+0100\n"
 "Last-Translator: David Cabo <david@civio.es>\n"
 "Language-Team: \n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.7\n"
+"X-Generator: Poedit 1.8.11\n"
 
 #: templates/tax_receipt/tax_receipt_form.html:3
 #, fuzzy
@@ -230,8 +230,8 @@ msgid "Tasa"
 msgstr "Taxa"
 
 #: templates/tax_receipt/tax_receipt_form.html:126
-msgid "Contribuyes con un total de <b id=\"tax-amount-paid\"></b> a los presupuestos del Gobierno de Aragón"
-msgstr "Contribueixes amb un total de <b id=\"tax-amount-paid\"></b> als pressupostos del Ajuntament de Polinyà"
+msgid "Contribuyes con un total de <strong id=\"tax-amount-paid\"></strong> a los presupuestos del Gobierno de Aragón"
+msgstr "Contribueixes amb un total de <strong id=\"tax-amount-paid\"></strong> als pressupostos del Ajuntament de Polinyà"
 
 #: templates/tax_receipt/tax_receipt_script.html:66
 msgid "Política"
