--- a/locale/ca/LC_MESSAGES/django.po
+++ b/locale/ca/LC_MESSAGES/django.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-13 16:37+0200\n"
-"PO-Revision-Date: 2017-01-05 12:47+0100\n"
+"PO-Revision-Date: 2017-07-23 19:55+0200\n"
 "Last-Translator: David Cabo <david@civio.es>\n"
 "Language-Team: \n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Poedit 2.0.3\n"
 
 #: templates/tax_receipt/tax_receipt_form.html:3
 #, fuzzy
@@ -107,8 +107,23 @@ msgid "Ninguna"
 msgstr "Cap"
 
 #: templates/tax_receipt/tax_receipt_form.html:32
-msgid "Familia numerosa general o monoparental con valor catastral menor de 150.000€"
-msgstr "Família nombrosa general o monoparental amb valor cadastral menor de 150.000€"
+msgid "Familia numerosa o monoparental general con valor catastral menor de 80.000€"
+msgstr "Família nombrosa o monoparental general amb valor cadastral menor de 150.000€"
+
+msgid "Familia numerosa o monoparental general con valor catastral entre 80.001€ y 160.000€"
+msgstr "Família nombrosa o monoparental general amb valor cadastral entre 80.001€ i 160.000€"
+
+msgid "Familia numerosa o monoparental general con valor catastral entre 160.001€ y 320.000€"
+msgstr "Família nombrosa o monoparental general amb valor cadastral entre 160.001€ i 320.000€"
+
+msgid "Familia numerosa o monoparental especial con valor catastral menor de 80.000€"
+msgstr "Família nombrosa o monoparental especial amb valor cadastral menor de 150.000€"
+
+msgid "Familia numerosa o monoparental especial con valor catastral entre 80.001€ y 160.000€"
+msgstr "Família nombrosa o monoparental especial amb valor cadastral entre 80.001€ i 160.000€"
+
+msgid "Familia numerosa o monoparental especial con valor catastral entre 160.001€ y 320.000€"
+msgstr "Família nombrosa o monoparental especial amb valor cadastral entre 160.001€ i 320.000€"
 
 #: templates/tax_receipt/tax_receipt_form.html:39
 msgid "Vehículo"
